[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Print the symbols that are imported in and exported from a wasm file."
license = "Apache-2.0/MIT"
name = "wasm-nm"
version = "0.1.0"

[[bin]]
doc = false
name = "wasm-nm"
path = "src/bin/wasm-nm.rs"
required-features = ["exe"]

[dependencies]
failure = "0.1.1"
parity-wasm = "0.17.0"

[dependencies.clap]
optional = true
version = "2.29.0"

[features]
default = ["exe"]
exe = ["clap"]
